--- a/package.json
+++ b/package.json
@@ -8,7 +8,22 @@
     "url": "https://github.com/GoogleChromeLabs/serial-terminal.git"
   },
   "dependencies": {
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/runtime": "^7.14.6",
+    "@babel/runtime-corejs3": "^7.14.7",
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@types/w3c-web-serial": "^1.0.2",
+    "babel-loader": "^8.2.2",
+    "core-js": "^3.15.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-system": "^5.1.5",
     "xterm": "^4.13.0",
     "xterm-addon-fit": "^0.5.0"
   },
