--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@types/w3c-web-serial": "^1.0.2",
+    "apexcharts": "^3.27.2",
     "babel-loader": "^8.2.2",
+    "chart.js": "^3.4.1",
     "core-js": "^3.15.2",
+    "i": "^0.3.6",
+    "npm": "^7.20.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
-    "styled-system": "^5.1.5",
-    "xterm": "^4.13.0",
-    "xterm-addon-fit": "^0.5.0"
+    "rxjs": "^7.2.0",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.3",
