--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/GoogleChromeLabs/serial-terminal.git"
+    "url": ""
   },
   "dependencies": {
     "@babel/core": "^7.14.6",
@@ -19,14 +19,11 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@types/w3c-web-serial": "^1.0.2",
-    "apexcharts": "^3.27.2",
     "babel-loader": "^8.2.2",
     "chart.js": "^3.4.1",
     "core-js": "^3.15.2",
-    "i": "^0.3.6",
     "npm": "^7.20.0",
     "react": "^17.0.2",
-    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "rxjs": "^7.2.0",
     "styled-system": "^5.1.5"
@@ -38,7 +35,6 @@
     "css-loader": "^5.2.7",
     "eslint": "^7.30.0",
     "eslint-config-google": "^0.14.0",
-    "gh-pages": "^3.2.3",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "style-loader": "^3.1.0",
@@ -52,8 +48,6 @@
   },
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
-    "lint": "eslint src/*.ts",
-    "publish": "node publish.js"
+    "build": "webpack serve --config webpack.prod.js"
   }
 }
